; ModuleID = '/home/carl/AnghaBench/freebsd/bin/sh/extr_memalloc.c_stunalloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/sh/extr_memalloc.c_stunalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STDERR_FILENO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"stunalloc\0A\00", align 1
@stacknxt = common dso_local global i8* null, align 8
@stacknleft = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @stunalloc(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp eq i8* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @STDERR_FILENO, align 4
  %7 = call i32 @write(i32 %6, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 10)
  %8 = call i32 (...) @abort() #3
  unreachable

9:                                                ; preds = %1
  %10 = load i8*, i8** @stacknxt, align 8
  %11 = load i8*, i8** %2, align 8
  %12 = ptrtoint i8* %10 to i64
  %13 = ptrtoint i8* %11 to i64
  %14 = sub i64 %12, %13
  %15 = load i32, i32* @stacknleft, align 4
  %16 = sext i32 %15 to i64
  %17 = add nsw i64 %16, %14
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* @stacknleft, align 4
  %19 = load i8*, i8** %2, align 8
  store i8* %19, i8** @stacknxt, align 8
  ret void
}

declare dso_local i32 @write(i32, i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
